# template-backend-rust

./: .env.backup  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  database.toml  db.config.json  diesel.toml  docker-compose.yml  metadata.json  metadata.toml  releaser.toml  services.toml  staffe.toml
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
src/: main.rs  models_generated.rs  schema_generated.rs
src/db/: cluster_helper.rs  create_consumer.rs  delete_consumer.rs  mod.rs  rabbitmq.rs  redis.rs
src/fairings/: auth.rs  cors.rs
src/middlewares/: IAMService_config.rs  groups.rs  groups_owned.rs  iam_service.rs  jwt.rs  mod.rs
src/models/: mod.rs  request.rs  response.rs  schema.rs
src/models/identity/: schema.rs
src/routes/: customer.rs  mod.rs  provisioner.rs  student.rs  tenant.rs
src/tests/: mod.rs
